<resources>
    <string name="app_name">ConcertTicketsDC</string>
    <string name="txtTitle">Ticket Value</string>
    <string name="txtTickets">Number of Tickets</string>
    <string name="prompt">Select Group</string>
    <string name="description">Concert Image</string>
    <string name="btnCost">FIND THE COST</string>
    <string-array name="txtGroup">
        <item>Life Revealed</item>
        <item>Spacial Sense</item>
        <item>Zig Zag</item>
    </string-array>
</resources>
