<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daniel_catlett.concertticketsdc.MainActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/txtGroup"
        android:spinnerMode="dialog"
        android:layout_below="@+id/txtTickets"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:prompt="@string/prompt"
        android:entries="@array/txtGroup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/txtResults"
        android:textSize="24sp"
        android:layout_below="@+id/btnCost"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/txtTickets"
        android:textSize="36sp"
        android:hint="@string/txtTickets"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        app:srcCompat="@drawable/concert"
        android:id="@+id/imageView"
        android:layout_width="300sp"
        android:layout_height="130sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/description" />

    <TextView
        android:text="@string/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:textSize="48sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btnCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCost"
        android:textSize="30sp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/txtGroup"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
